Scraping framework setup

--- a/Integrating_everything_2.ipynb
+++ b/Integrating_everything_2.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "7237cda5",
+   "metadata": {},
+   "source": [
+    "# Getting Most Recent Data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "416fdaee",
    "metadata": {},
    "outputs": [
@@ -345,17 +353,344 @@
       "  ImpPos: \n",
       "--------------------------------------------------\n",
       "\n",
+      "--- Match #6 - PPI: 2093-3540-00-037 ---\n",
+      "Modified Date: 2025-05-26 18:00:00\n",
+      "\n",
+      "MODTYPE ATTRIBUTES:\n",
+      "  PERIMETER: 3208.5132617684767\n",
+      "  OBJECTID: 11129\n",
+      "  PPI: 2093-3540-00-037\n",
+      "  SOURCE: 1\n",
+      "  MODDATE: 2025-05-26 18:00:00\n",
+      "  MODTYPE: 4\n",
+      "\n",
+      "SCHEDULE ID ATTRIBUTES:\n",
+      "  OBJECTID_1: 4385\n",
+      "  OBJECTID: 19432\n",
+      "  PPI: 2093-3540-00-037\n",
+      "  Schedule: 3009377\n",
+      "  EcoCode: 6\n",
+      "  EcoDesc: Keystone\n",
+      "  NhoodCode: 27000\n",
+      "  NhoodDescr: Montezuma Area\n",
+      "  SubCode: 9000\n",
+      "  SubName: METES & BOUNDS (ALL)\n",
+      "  SecondID: \n",
+      "  ShortDesc: Undivided 33.333% Interest TR 5-76 Sec 3\n",
+      "  AddressID: 37861\n",
+      "  StreetID: 563\n",
+      "  SitusAdd: 6155 Bell Mine RD (CR 284)\n",
+      "  HouseNum: 6155\n",
+      "  FullStreet: Bell Mine RD (CR 284)\n",
+      "  StreetName: Bell Mine\n",
+      "  TownCode: SC\n",
+      "  TownName: Unincorporated Summit County\n",
+      "  OwnerAdd1: PO BOX 447\n",
+      "  OwnerAdd2: \n",
+      "  OwnerCity: SILVERTHORNE\n",
+      "  OwnerState: CO\n",
+      "  PostCode: 80498-0447\n",
+      "  FullAdd: PO BOX 447|SILVERTHORNE, CO 80498-0447\n",
+      "  TotAcres: 5.499\n",
+      "  TotSqFt: 239536\n",
+      "  YearBuilt: 0\n",
+      "  ExtWallMat: \n",
+      "  ExtWallHgt: -1\n",
+      "  HeatType: \n",
+      "  SquareFeet: 0\n",
+      "  SqeFtLiving: 0\n",
+      "  Unfinished: 0\n",
+      "  BsmtType: \n",
+      "  GarageType: \n",
+      "  NumOfCars: 0\n",
+      "  GarSqFt: 0\n",
+      "  NumOfRms: 0\n",
+      "  NumBedRms: 0\n",
+      "  NumLofts: 0\n",
+      "  NumKitch: 0\n",
+      "  MasterBath: 0\n",
+      "  FullBath: 0\n",
+      "  TqtrBaths: 0\n",
+      "  HalfBaths: 0\n",
+      "  QtrBaths: 0\n",
+      "  TotBath: 0.0\n",
+      "  MobHtitle: \n",
+      "  FloorLevel: 0\n",
+      "  ImpPos: \n",
+      "--------------------------------------------------\n",
+      "\n",
+      "--- Match #7 - PPI: 2097-3540-00-074 ---\n",
+      "Modified Date: 2025-05-26 18:00:00\n",
+      "\n",
+      "MODTYPE ATTRIBUTES:\n",
+      "  PERIMETER: 431.95746154219296\n",
+      "  OBJECTID: 11212\n",
+      "  PPI: 2097-3540-00-074\n",
+      "  SOURCE: 1\n",
+      "  MODDATE: 2025-05-26 18:00:00\n",
+      "  MODTYPE: 4\n",
+      "\n",
+      "SCHEDULE ID ATTRIBUTES:\n",
+      "  OBJECTID_1: 20588\n",
+      "  OBJECTID: 23119\n",
+      "  PPI: 2097-3540-00-074\n",
+      "  Schedule: 6501752\n",
+      "  EcoCode: 2\n",
+      "  EcoDesc: Frisco\n",
+      "  NhoodCode: 23000\n",
+      "  NhoodDescr: Frisco Town\n",
+      "  SubCode: 74\n",
+      "  SubName: BILLS RANCH SUB\n",
+      "  SecondID: \n",
+      "  ShortDesc: In BILLS RANCH SUB AKA MISC TR IN 35-5-7\n",
+      "  AddressID: -1\n",
+      "  StreetID: -1\n",
+      "  SitusAdd: \n",
+      "  HouseNum: \n",
+      "  FullStreet: \n",
+      "  StreetName: \n",
+      "  TownCode: SC\n",
+      "  TownName: Unincorporated Summit County\n",
+      "  OwnerAdd1: PO BOX 68\n",
+      "  OwnerAdd2: \n",
+      "  OwnerCity: BRECKENRIDGE\n",
+      "  OwnerState: CO\n",
+      "  PostCode: 80424\n",
+      "  FullAdd: PO BOX 68|BRECKENRIDGE, CO 80424\n",
+      "  TotAcres: 15.5064\n",
+      "  TotSqFt: 675460\n",
+      "  YearBuilt: 0\n",
+      "  ExtWallMat: \n",
+      "  ExtWallHgt: -1\n",
+      "  HeatType: \n",
+      "  SquareFeet: 0\n",
+      "  SqeFtLiving: 0\n",
+      "  Unfinished: 0\n",
+      "  BsmtType: \n",
+      "  GarageType: \n",
+      "  NumOfCars: 0\n",
+      "  GarSqFt: 0\n",
+      "  NumOfRms: 0\n",
+      "  NumBedRms: 0\n",
+      "  NumLofts: 0\n",
+      "  NumKitch: 0\n",
+      "  MasterBath: 0\n",
+      "  FullBath: 0\n",
+      "  TqtrBaths: 0\n",
+      "  HalfBaths: 0\n",
+      "  QtrBaths: 0\n",
+      "  TotBath: 0.0\n",
+      "  MobHtitle: \n",
+      "  FloorLevel: 0\n",
+      "  ImpPos: \n",
+      "--------------------------------------------------\n",
+      "\n",
+      "--- Match #8 - PPI: 2097-3540-00-074 ---\n",
+      "Modified Date: 2025-05-26 18:00:00\n",
+      "\n",
+      "MODTYPE ATTRIBUTES:\n",
+      "  PERIMETER: 472.9205674204005\n",
+      "  OBJECTID: 11242\n",
+      "  PPI: 2097-3540-00-074\n",
+      "  SOURCE: 1\n",
+      "  MODDATE: 2025-05-26 18:00:00\n",
+      "  MODTYPE: 4\n",
+      "\n",
+      "SCHEDULE ID ATTRIBUTES:\n",
+      "  OBJECTID_1: 20588\n",
+      "  OBJECTID: 23119\n",
+      "  PPI: 2097-3540-00-074\n",
+      "  Schedule: 6501752\n",
+      "  EcoCode: 2\n",
+      "  EcoDesc: Frisco\n",
+      "  NhoodCode: 23000\n",
+      "  NhoodDescr: Frisco Town\n",
+      "  SubCode: 74\n",
+      "  SubName: BILLS RANCH SUB\n",
+      "  SecondID: \n",
+      "  ShortDesc: In BILLS RANCH SUB AKA MISC TR IN 35-5-7\n",
+      "  AddressID: -1\n",
+      "  StreetID: -1\n",
+      "  SitusAdd: \n",
+      "  HouseNum: \n",
+      "  FullStreet: \n",
+      "  StreetName: \n",
+      "  TownCode: SC\n",
+      "  TownName: Unincorporated Summit County\n",
+      "  OwnerAdd1: PO BOX 68\n",
+      "  OwnerAdd2: \n",
+      "  OwnerCity: BRECKENRIDGE\n",
+      "  OwnerState: CO\n",
+      "  PostCode: 80424\n",
+      "  FullAdd: PO BOX 68|BRECKENRIDGE, CO 80424\n",
+      "  TotAcres: 15.5064\n",
+      "  TotSqFt: 675460\n",
+      "  YearBuilt: 0\n",
+      "  ExtWallMat: \n",
+      "  ExtWallHgt: -1\n",
+      "  HeatType: \n",
+      "  SquareFeet: 0\n",
+      "  SqeFtLiving: 0\n",
+      "  Unfinished: 0\n",
+      "  BsmtType: \n",
+      "  GarageType: \n",
+      "  NumOfCars: 0\n",
+      "  GarSqFt: 0\n",
+      "  NumOfRms: 0\n",
+      "  NumBedRms: 0\n",
+      "  NumLofts: 0\n",
+      "  NumKitch: 0\n",
+      "  MasterBath: 0\n",
+      "  FullBath: 0\n",
+      "  TqtrBaths: 0\n",
+      "  HalfBaths: 0\n",
+      "  QtrBaths: 0\n",
+      "  TotBath: 0.0\n",
+      "  MobHtitle: \n",
+      "  FloorLevel: 0\n",
+      "  ImpPos: \n",
+      "--------------------------------------------------\n",
+      "\n",
+      "--- Match #9 - PPI: 2211-3143-10-009 ---\n",
+      "Modified Date: 2025-05-26 18:00:00\n",
+      "\n",
+      "MODTYPE ATTRIBUTES:\n",
+      "  PERIMETER: 562.502522551885\n",
+      "  OBJECTID: 16102\n",
+      "  PPI: 2211-3143-10-009\n",
+      "  SOURCE: 1\n",
+      "  MODDATE: 2025-05-26 18:00:00\n",
+      "  MODTYPE: 4\n",
+      "\n",
+      "SCHEDULE ID ATTRIBUTES:\n",
+      "  OBJECTID_1: 30668\n",
+      "  OBJECTID: 31660\n",
+      "  PPI: 2211-3143-10-009\n",
+      "  Schedule: 6512315\n",
+      "  EcoCode: 5\n",
+      "  EcoDesc: Breckenridge/Blue River\n",
+      "  NhoodCode: 21010\n",
+      "  NhoodDescr: Breckenridge East\n",
+      "  SubCode: 2173\n",
+      "  SubName: GOLD FLAKE SUB FIL 3A\n",
+      "  SecondID: Tract B\n",
+      "  ShortDesc: TRACT B GOLD FLAKE SUB FIL 3A PUBLIC OPE\n",
+      "  AddressID: -1\n",
+      "  StreetID: -1\n",
+      "  SitusAdd: \n",
+      "  HouseNum: \n",
+      "  FullStreet: \n",
+      "  StreetName: \n",
+      "  TownCode: B\n",
+      "  TownName: Breckenridge        \n",
+      "  OwnerAdd1: PO BOX 168\n",
+      "  OwnerAdd2: \n",
+      "  OwnerCity: BRECKENRIDGE\n",
+      "  OwnerState: CO\n",
+      "  PostCode: 80424-0168\n",
+      "  FullAdd: PO BOX 168|BRECKENRIDGE, CO 80424-0168\n",
+      "  TotAcres: 0.72\n",
+      "  TotSqFt: 31363\n",
+      "  YearBuilt: 0\n",
+      "  ExtWallMat: \n",
+      "  ExtWallHgt: -1\n",
+      "  HeatType: \n",
+      "  SquareFeet: 0\n",
+      "  SqeFtLiving: 0\n",
+      "  Unfinished: 0\n",
+      "  BsmtType: \n",
+      "  GarageType: \n",
+      "  NumOfCars: 0\n",
+      "  GarSqFt: 0\n",
+      "  NumOfRms: 0\n",
+      "  NumBedRms: 0\n",
+      "  NumLofts: 0\n",
+      "  NumKitch: 0\n",
+      "  MasterBath: 0\n",
+      "  FullBath: 0\n",
+      "  TqtrBaths: 0\n",
+      "  HalfBaths: 0\n",
+      "  QtrBaths: 0\n",
+      "  TotBath: 0.0\n",
+      "  MobHtitle: \n",
+      "  FloorLevel: 0\n",
+      "  ImpPos: \n",
+      "--------------------------------------------------\n",
+      "\n",
+      "--- Match #10 - PPI: 9999-9999-00-049 ---\n",
+      "Modified Date: 2025-05-26 18:00:00\n",
+      "\n",
+      "MODTYPE ATTRIBUTES:\n",
+      "  PERIMETER: 165.50644868848693\n",
+      "  OBJECTID: 17902\n",
+      "  PPI: 9999-9999-00-049\n",
+      "  SOURCE: 1\n",
+      "  MODDATE: 2025-05-26 18:00:00\n",
+      "  MODTYPE: 4\n",
+      "\n",
+      "SCHEDULE ID ATTRIBUTES:\n",
+      "  OBJECTID_1: 38094\n",
+      "  OBJECTID: 1855\n",
+      "  PPI: 9999-9999-00-049\n",
+      "  Schedule: 300954\n",
+      "  EcoCode: 5\n",
+      "  EcoDesc: Breckenridge/Blue River\n",
+      "  NhoodCode: 11111\n",
+      "  NhoodDescr: Countywide Personal Property\n",
+      "  SubCode: 8999\n",
+      "  SubName: STATE ASSESSED\n",
+      "  SecondID: \n",
+      "  ShortDesc: Improvement Only IN BRECKENRIDGE\n",
+      "  AddressID: -1\n",
+      "  StreetID: -1\n",
+      "  SitusAdd: \n",
+      "  HouseNum: \n",
+      "  FullStreet: \n",
+      "  StreetName: \n",
+      "  TownCode: B\n",
+      "  TownName: Breckenridge        \n",
+      "  OwnerAdd1: TAX SERVICES - BILL KOWALOWSKI\n",
+      "  OwnerAdd2: PO BOX 1979\n",
+      "  OwnerCity: DENVER\n",
+      "  OwnerState: CO\n",
+      "  PostCode: 80201-1979\n",
+      "  FullAdd: TAX SERVICES - BILL KOWALOWSKI|PO BOX 1979|DENVER, CO 80201-1979\n",
+      "  TotAcres: 0.0\n",
+      "  TotSqFt: 0\n",
+      "  YearBuilt: 0\n",
+      "  ExtWallMat: Unknown\n",
+      "  ExtWallHgt: -1\n",
+      "  HeatType: Unknown\n",
+      "  SquareFeet: 0\n",
+      "  SqeFtLiving: 0\n",
+      "  Unfinished: 0\n",
+      "  BsmtType: None\n",
+      "  GarageType: \n",
+      "  NumOfCars: 0\n",
+      "  GarSqFt: 0\n",
+      "  NumOfRms: 0\n",
+      "  NumBedRms: 0\n",
+      "  NumLofts: 0\n",
+      "  NumKitch: 0\n",
+      "  MasterBath: 0\n",
+      "  FullBath: 0\n",
+      "  TqtrBaths: 0\n",
+      "  HalfBaths: 0\n",
+      "  QtrBaths: 0\n",
+      "  TotBath: 0.0\n",
+      "  MobHtitle: \n",
+      "  FloorLevel: 0\n",
+      "  ImpPos: Undefined\n",
+      "--------------------------------------------------\n",
+      "\n",
       "SUMMARY:\n",
-      "Total queried parcels: 5\n",
-      "Matching PPIs found in database: 5\n",
+      "Total queried parcels: 10\n",
+      "Matching PPIs found in database: 10\n",
       "Match percentage: 100.0%\n"
      ]
     }
    ],
    "source": [
-    "import requests\n",
-    "from datetime import datetime\n",
-    "\n",
     "def get_database_ppis():\n",
     "    \"\"\"Retrieve all PPIs from the database (layer 12) for comparison\"\"\"\n",
     "    url = \"https://gis.summitcountyco.gov/arcgis/rest/services/ParcelQueryTool/SummitMap1_Pro321/MapServer/12/query\"\n",
@@ -408,7 +743,7 @@
     "        return {}\n",
     "\n",
     "def main():\n",
-    "    num_results = 5\n",
+    "    num_results = 10\n",
     "    \n",
     "    # Get database PPIs for comparison\n",
     "    database_ppis = get_database_ppis()\n",
@@ -537,12 +872,12 @@
    "id": "7f76972f",
    "metadata": {},
    "source": [
-    "# Extracting Document Types"
+    "# Scraping Schedul ID URLs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "bf130511",
    "metadata": {},
    "outputs": [
@@ -550,41 +885,44 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "--- JSON RESULTS SAVED ---\n",
-      "Number of records stored: 5\n",
       "https://gis.summitcountyco.gov/map/DetailData.aspx?Schno=4008327\n",
       "https://gis.summitcountyco.gov/map/DetailData.aspx?Schno=3000334\n",
       "https://gis.summitcountyco.gov/map/DetailData.aspx?Schno=3001794\n",
       "https://gis.summitcountyco.gov/map/DetailData.aspx?Schno=3000256\n",
-      "https://gis.summitcountyco.gov/map/DetailData.aspx?Schno=6518943\n"
+      "https://gis.summitcountyco.gov/map/DetailData.aspx?Schno=6518943\n",
+      "https://gis.summitcountyco.gov/map/DetailData.aspx?Schno=3009377\n",
+      "https://gis.summitcountyco.gov/map/DetailData.aspx?Schno=6501752\n",
+      "https://gis.summitcountyco.gov/map/DetailData.aspx?Schno=6501752\n",
+      "https://gis.summitcountyco.gov/map/DetailData.aspx?Schno=6512315\n",
+      "https://gis.summitcountyco.gov/map/DetailData.aspx?Schno=300954\n"
      ]
     }
    ],
    "source": [
-    "# Optional: Print the JSON structure for verification\n",
-    "if json_results:\n",
-    "    print(f\"\\n--- JSON RESULTS SAVED ---\")\n",
-    "    print(f\"Number of records stored: {len(json_results)}\")\n",
-    "    # Uncomment the next line to see the full JSON structure:\n",
-    "    # import json; print(json.dumps(json_results, indent=2))\n",
+    "def scrape_json_results(results):\n",
+    "    for result in results:\n",
+    "        schedule_value = result['Schedule ID Attributes']['Schedule']\n",
+    "        schedule_url = f'https://gis.summitcountyco.gov/map/DetailData.aspx?Schno={schedule_value}'\n",
+    "        print(schedule_url)\n",
     "\n",
-    "    schedule_value = json_results[0]['Schedule ID Attributes']['Schedule']\n",
-    "\n",
-    "    # To loop through all records and access Schedule:\n",
-    "    for record in json_results:\n",
-    "        schedule = record['Schedule ID Attributes']['Schedule']\n",
-    "\n",
-    "    # To get all Schedule values as a list:\n",
-    "        schedules = [record['Schedule ID Attributes']['Schedule'] for record in json_results]\n",
-    "\n",
-    "    for id in schedules:\n",
-    "        all_scrape_urls = []\n",
-    "        scrape_url = f'https://gis.summitcountyco.gov/map/DetailData.aspx?Schno={id}'\n",
-    "        requests.get(scrape_url)\n",
-    "        all_scrape_urls.append(scrape_url)\n",
-    "        print(scrape_url)"
+    "scrape_json_results(json_results)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a27b8b2f",
+   "metadata": {},
+   "source": [
+    "# Extract the Data With the Original Data Extraction Structure"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "02b46112",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
