Finalized Document Type scrape

--- a/Integrating_everything_2.ipynb
+++ b/Integrating_everything_2.ipynb
@@ -294,16 +294,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "bf130511",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<td align=\"center\" class=\"docLink\" rowspan=\"1\" valign=\"bottom\"><a href=\"pdfs/doctype.pdf\" target=\"_BLANK\">Document Type</a></td>\n",
-      "<td class=\"style2b\" rowspan=\"1\">ORD</td>\n"
+     "ename": "NameError",
+     "evalue": "name 'doc_type_cell' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[41]\u001b[39m\u001b[32m, line 16\u001b[39m\n\u001b[32m     13\u001b[39m             doc_type_cell = data_row.select(\u001b[33m'\u001b[39m\u001b[33mtd.style2b\u001b[39m\u001b[33m'\u001b[39m)[\u001b[32m2\u001b[39m]\n\u001b[32m     15\u001b[39m \u001b[38;5;66;03m# Print only the text content\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m16\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[43mdoc_type_cell\u001b[49m.text)  \u001b[38;5;66;03m# Prints: ORD\u001b[39;00m\n\u001b[32m     19\u001b[39m scrape_json_results(json_results)\n",
+      "\u001b[31mNameError\u001b[39m: name 'doc_type_cell' is not defined"
      ]
     }
    ],
@@ -316,14 +319,14 @@
     "        if schedule_url:\n",
     "            r = requests.get(schedule_url)\n",
     "            soup = BeautifulSoup(r.text, 'html.parser')\n",
+    "\n",
     "            # Find the Document Type header, then get the data row below it\n",
     "            doc_header = soup.select_one('td.docLink')\n",
     "            data_row = doc_header.parent.find_next_sibling('tr')\n",
-    "            doc_type_cell = data_row.select('td.style2b')[2]  # The \"ORD\" cell\n",
-    "            print(doc_header)\n",
-    "            print(doc_type_cell)\n",
+    "            doc_type_cell = data_row.select('td.style2b')[2]\n",
     "\n",
-    "\n",
+    "            # Print only the text content\n",
+    "            print(doc_type_cell.text)  # Prints: ORD\n",
     "\n",
     "scrape_json_results(json_results)"
    ]
