--- a/Integrating_everything_2.ipynb
+++ b/Integrating_everything_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 43,
    "id": "3af6db23",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "416fdaee",
    "metadata": {},
    "outputs": [
@@ -29,81 +29,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading database PPIs for comparison...\n",
-      "Loaded 21031 unique PPIs from database\n",
-      "\n",
-      "Matching PPIs from Most Recently Modified Parcels:\n",
-      "\n",
-      "--- Match #1 - PPI: 1697-3440-00-014 ---\n",
-      "Modified Date: 2025-05-26 18:00:00\n",
-      "\n",
-      "MODTYPE ATTRIBUTES:\n",
-      "  PERIMETER: 7126.66105626297\n",
-      "  OBJECTID: 367\n",
-      "  PPI: 1697-3440-00-014\n",
-      "  SOURCE: 1\n",
-      "  MODDATE: 2025-05-26 18:00:00\n",
-      "  MODTYPE: 4\n",
-      "\n",
-      "SCHEDULE ID ATTRIBUTES:\n",
-      "  OBJECTID_1: 353\n",
-      "  OBJECTID: 19851\n",
-      "  PPI: 1697-3440-00-014\n",
-      "  Schedule: 4008327\n",
-      "  EcoCode: 1\n",
-      "  EcoDesc: Lower Blue Basin\n",
-      "  NhoodCode: 24800\n",
-      "  NhoodDescr: Lower Blue River Valley\n",
-      "  SubCode: 9000\n",
-      "  SubName: METES & BOUNDS (ALL)\n",
-      "  SecondID: \n",
-      "  ShortDesc: TR 2-79 Sec 34 Qtr 4 Acres 82.110 AKA TR\n",
-      "  AddressID: -1\n",
-      "  StreetID: -1\n",
-      "  SitusAdd: \n",
-      "  HouseNum: \n",
-      "  FullStreet: \n",
-      "  StreetName: \n",
-      "  TownCode: SC\n",
-      "  TownName: Unincorporated Summit County\n",
-      "  OwnerAdd1: 6060 BROADWAY\n",
-      "  OwnerAdd2: \n",
-      "  OwnerCity: DENVER\n",
-      "  OwnerState: CO\n",
-      "  PostCode: 80216\n",
-      "  FullAdd: 6060 BROADWAY|DENVER, CO 80216\n",
-      "  TotAcres: 82.11\n",
-      "  TotSqFt: 3576711\n",
-      "  YearBuilt: 0\n",
-      "  ExtWallMat: \n",
-      "  ExtWallHgt: -1\n",
-      "  HeatType: \n",
-      "  SquareFeet: 0\n",
-      "  SqeFtLiving: 0\n",
-      "  Unfinished: 0\n",
-      "  BsmtType: \n",
-      "  GarageType: \n",
-      "  NumOfCars: 0\n",
-      "  GarSqFt: 0\n",
-      "  NumOfRms: 0\n",
-      "  NumBedRms: 0\n",
-      "  NumLofts: 0\n",
-      "  NumKitch: 0\n",
-      "  MasterBath: 0\n",
-      "  FullBath: 0\n",
-      "  TqtrBaths: 0\n",
-      "  HalfBaths: 0\n",
-      "  QtrBaths: 0\n",
-      "  TotBath: 0.0\n",
-      "  MobHtitle: \n",
-      "  FloorLevel: 0\n",
-      "  ImpPos: \n",
-      "--------------------------------------------------\n",
-      "\n",
-      "SUMMARY:\n",
-      "Total queried parcels: 1\n",
-      "Matching PPIs found in database: 1\n",
-      "Match percentage: 100.0%\n"
+      "Loading database PPIs for comparison...\n"
      ]
     }
    ],
@@ -160,7 +86,7 @@
     "        return {}\n",
     "\n",
     "def main():\n",
-    "    num_results = 1\n",
+    "    num_results = 5000\n",
     "    \n",
     "    # Get database PPIs for comparison\n",
     "    database_ppis = get_database_ppis()\n",
@@ -299,14 +225,10 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'doc_type_cell' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[41]\u001b[39m\u001b[32m, line 16\u001b[39m\n\u001b[32m     13\u001b[39m             doc_type_cell = data_row.select(\u001b[33m'\u001b[39m\u001b[33mtd.style2b\u001b[39m\u001b[33m'\u001b[39m)[\u001b[32m2\u001b[39m]\n\u001b[32m     15\u001b[39m \u001b[38;5;66;03m# Print only the text content\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m16\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[43mdoc_type_cell\u001b[49m.text)  \u001b[38;5;66;03m# Prints: ORD\u001b[39;00m\n\u001b[32m     19\u001b[39m scrape_json_results(json_results)\n",
-      "\u001b[31mNameError\u001b[39m: name 'doc_type_cell' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ORD\n"
      ]
     }
    ],
@@ -322,11 +244,18 @@
     "\n",
     "            # Find the Document Type header, then get the data row below it\n",
     "            doc_header = soup.select_one('td.docLink')\n",
-    "            data_row = doc_header.parent.find_next_sibling('tr')\n",
-    "            doc_type_cell = data_row.select('td.style2b')[2]\n",
-    "\n",
-    "            # Print only the text content\n",
-    "            print(doc_type_cell.text)  # Prints: ORD\n",
+    "            \n",
+    "            # Add error handling in case docLink doesn't exist\n",
+    "            if doc_header:\n",
+    "                data_row = doc_header.parent.find_next_sibling('tr')\n",
+    "                doc_type_cell = data_row.select('td.style2b')[2]\n",
+    "                doc_type_text = doc_type_cell.text.strip()  # Get the text and strip whitespace\n",
+    "                \n",
+    "                # Fix the conditional logic\n",
+    "                if doc_type_text == 'B&S' or doc_type_text == 'BSA':\n",
+    "                    print(schedule_url)\n",
+    "            else:\n",
+    "                print(f\"No docLink found for {schedule_url}\")\n",
     "\n",
     "scrape_json_results(json_results)"
    ]
