Added missing import

--- a/Integrating_everything_2.ipynb
+++ b/Integrating_everything_2.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 51,
    "id": "3af6db23",
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
+    "from datetime import datetime\n",
     "from bs4 import BeautifulSoup"
    ]
   },
@@ -86,7 +87,7 @@
     "        return {}\n",
     "\n",
     "def main():\n",
-    "    num_results = 5000\n",
+    "    num_results = 10000\n",
     "    \n",
     "    # Get database PPIs for comparison\n",
     "    database_ppis = get_database_ppis()\n",
@@ -215,7 +216,9 @@
    "id": "7f76972f",
    "metadata": {},
    "source": [
-    "# Scraping Schedul ID URLs"
+    "# Scraping Schedul ID URLs\n",
+    "\n",
+    "Something in this code is highly inefficient. Work on that after the final result is in."
    ]
   },
   {
@@ -228,7 +231,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ORD\n"
+      "https://gis.summitcountyco.gov/map/DetailData.aspx?Schno=6520117\n",
+      "https://gis.summitcountyco.gov/map/DetailData.aspx?Schno=6519801\n",
+      "https://gis.summitcountyco.gov/map/DetailData.aspx?Schno=6519745\n",
+      "https://gis.summitcountyco.gov/map/DetailData.aspx?Schno=6519618\n",
+      "https://gis.summitcountyco.gov/map/DetailData.aspx?Schno=6518305\n",
+      "https://gis.summitcountyco.gov/map/DetailData.aspx?Schno=6518305\n",
+      "https://gis.summitcountyco.gov/map/DetailData.aspx?Schno=6517229\n",
+      "https://gis.summitcountyco.gov/map/DetailData.aspx?Schno=6516933\n",
+      "https://gis.summitcountyco.gov/map/DetailData.aspx?Schno=6517040\n",
+      "https://gis.summitcountyco.gov/map/DetailData.aspx?Schno=6516420\n",
+      "https://gis.summitcountyco.gov/map/DetailData.aspx?Schno=6511028\n",
+      "https://gis.summitcountyco.gov/map/DetailData.aspx?Schno=4008688\n",
+      "https://gis.summitcountyco.gov/map/DetailData.aspx?Schno=6513406\n",
+      "https://gis.summitcountyco.gov/map/DetailData.aspx?Schno=6515622\n",
+      "https://gis.summitcountyco.gov/map/DetailData.aspx?Schno=6515228\n",
+      "https://gis.summitcountyco.gov/map/DetailData.aspx?Schno=6515393\n",
+      "https://gis.summitcountyco.gov/map/DetailData.aspx?Schno=6515394\n",
+      "https://gis.summitcountyco.gov/map/DetailData.aspx?Schno=6515008\n",
+      "https://gis.summitcountyco.gov/map/DetailData.aspx?Schno=6514696\n",
+      "https://gis.summitcountyco.gov/map/DetailData.aspx?Schno=6508773\n",
+      "https://gis.summitcountyco.gov/map/DetailData.aspx?Schno=6514245\n",
+      "https://gis.summitcountyco.gov/map/DetailData.aspx?Schno=6514168\n",
+      "https://gis.summitcountyco.gov/map/DetailData.aspx?Schno=6502678\n",
+      "https://gis.summitcountyco.gov/map/DetailData.aspx?Schno=6513585\n",
+      "https://gis.summitcountyco.gov/map/DetailData.aspx?Schno=6513678\n",
+      "https://gis.summitcountyco.gov/map/DetailData.aspx?Schno=6513677\n",
+      "https://gis.summitcountyco.gov/map/DetailData.aspx?Schno=6513676\n",
+      "https://gis.summitcountyco.gov/map/DetailData.aspx?Schno=6515250\n"
      ]
     }
    ],
@@ -250,14 +280,26 @@
     "                data_row = doc_header.parent.find_next_sibling('tr')\n",
     "                doc_type_cell = data_row.select('td.style2b')[2]\n",
     "                doc_type_text = doc_type_cell.text.strip()  # Get the text and strip whitespace\n",
-    "                \n",
+    "            \n",
     "                # Fix the conditional logic\n",
-    "                if doc_type_text == 'B&S' or doc_type_text == 'BSA':\n",
+    "                if doc_type_text == 'BSA' or doc_type_text == 'DED': #or doc_type_text == 'B&S':\n",
     "                    print(schedule_url)\n",
-    "            else:\n",
-    "                print(f\"No docLink found for {schedule_url}\")\n",
     "\n",
     "scrape_json_results(json_results)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c29fa7a0",
+   "metadata": {},
+   "source": [
+    "# Cleaning Everything Up\n",
+    "\n",
+    "Now that the hardest part is done, you gotta clean up the code so it presents the data in a cohesive format.\n",
+    "\n",
+    "You also need to include the \"Sale Date\" alongside the Document Type.\n",
+    "\n",
+    "Finally, you have to do a final big batch to find everything"
    ]
   }
  ],
